update: cleanup code and update to latest version